safari fix - loading page for safari. - about name title alignment on safari. -add text to ctrl button -live btn trial fix -height clipping on safari trial fix

--- a/src/Style/About.scss
+++ b/src/Style/About.scss
@@ -1,3 +1,9 @@
+@supports(height: 100dvh) {
+  .abt{
+    height: 100dvh !important;
+    min-height: 100dvh !important;
+    }
+}
 .abt {
   width: 100vw;
   height: 100vh;
@@ -246,8 +252,9 @@
       gap: 0.25rem;
 
       span {
-        width: 40px;
+        // width: 40px;
         height: 40px;
+        padding: 1rem 0.5rem;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -260,7 +267,11 @@
         vertical-align: middle;
         // font-size: x-large;
         line-height: 1;
-
+        p {
+          font-size: 0.8rem;
+          padding: 0.25rem;
+          text-transform: uppercase;
+      }
         &:hover {
           cursor: pointer;
         }
@@ -339,6 +350,7 @@
       }
       .abtTitle {
         justify-content: center;
+        margin: auto;
         h1 {
           font-size: clamp(2.5rem, 5.333vw + 0.333rem, 4.5rem);
         }
