--- a/src/Style/Work.scss
+++ b/src/Style/Work.scss
@@ -1,3 +1,8 @@
+@supports(height: 100dvh) {
+  .work-wrap{
+    min-height: 100dvh !important;
+    }
+}
 .work-wrap {
   // min-width: fit-content;
   width: 100vw;
@@ -122,11 +127,17 @@
       // width: 100%;
       // filter: contrast(10);
       position: relative;
-      & > span {
+
+      a {
+        overflow: hidden;
+      }
+      & span {
         // margin-right: 0.5rem;
         // position: absolute;
-        // top: -50%;
-        // left: -50%;
+
+        top: 50%;
+        left: 100%;
+        translate: 5% -50%;
         width: 40px;
         height: 40px;
         padding: 0.5rem;
@@ -168,8 +179,8 @@
         }
       }
       &:hover {
-        & > span {
-          translate: -20px 0;
+        & span {
+          translate: -50% -50%;
 
           &::before {
             background: white;
@@ -435,6 +446,7 @@
       -webkit-mask-repeat: no-repeat;
       mask-repeat: no-repeat;
       transition: -webkit-mask-image 0.2s, mask-image 0.2s;
+      text-align: center;
     }
     .drag {
       height: 40px;
@@ -456,7 +468,7 @@
         background-size: 5px 5px;
         background-position: center;
         border-radius: inherit;
-    }
+      }
     }
     .hit {
       width: 65px;
